--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Madoh</string>
+
+    <string name="home">Home</string>
+    <string name="stats">Stats</string>
+    <string name="accounts">Accounts</string>
 </resources>
